--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-9.91MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.65MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.07MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.19MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.48MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.87MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.64MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-13.02MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.19MB/s(Youtube:不良林), server: 164.92.107.59, port: 1645, type: ss, cipher: chacha20-ietf-poly1305, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
   - {name: 🇯🇵 日本-5.36MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 未知国家-5.30MB/s(Youtube:不良林), server: us02.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us02.gogogoo.cyou}}
-  - {name: 🇺🇸 美国-4.83MB/s(Youtube:不良林), server: gcfree.galaxy-cloud.icu, port: 443, type: vmess, uuid: 3f0613b2-fbff-4aa1-8731-3e13f0d6992d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /UAVwoa, ws-headers: {Host: gcfree.galaxy-cloud.icu}}
+  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: us02.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us02.gogogoo.cyou}}
   - {name: 🇰🇷 韩国-2.05MB/s(Youtube:不良林), server: jgwcc.356930.xyz, port: 10021, type: vmess, uuid: 6be5af5d-46f2-4a1a-9b89-c174aa7c8835, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: jgwcc.356930.xyz}}
+  - {name: 🇨🇳 台湾-2.55MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-9.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 未知国家-5.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-9.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 未知国家-5.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-9.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 未知国家-5.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-9.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 未知国家-5.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-9.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 未知国家-5.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-9.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 未知国家-5.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-9.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.36MB/s(Youtube:不良林)
-      - 未知国家-5.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.55MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
