--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.32MB/s(Youtube:不良林), server: 164.92.107.59, port: 1645, type: ss, cipher: chacha20-ietf-poly1305, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
-  - {name: 🇨🇳 中国-229.2KB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: 10b3df8b-2316-4b43-843a-d165ce6603aa, sni: hk64.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.86MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-4.70MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.32MB/s(Youtube:不良林), server: mc.vpshax.ml, port: 443, type: trojan, password: 48ac743a-2d49-4191-b804-0c7fa7e01146, sni: mc.vpshax.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.81MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.24MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.57MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-9.66MB/s(Youtube:不良林), server: jgwcc.356930.xyz, port: 10021, type: vmess, uuid: 6be5af5d-46f2-4a1a-9b89-c174aa7c8835, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: jgwcc.356930.xyz}}
   - {name: 🇨🇦 加拿大-2.79MB/s(Youtube:不良林), server: 134.195.196.150, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-5.44MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.86MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
@@ -22,10 +22,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
@@ -37,10 +37,10 @@ proxy-groups:
     interval: 300
     proxies:
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
@@ -53,10 +53,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
@@ -73,10 +73,10 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
@@ -88,10 +88,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
@@ -104,10 +104,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
@@ -129,10 +129,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-229.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
