--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.32MB/s(Youtube:不良林), server: mc.vpshax.ml, port: 443, type: trojan, password: 48ac743a-2d49-4191-b804-0c7fa7e01146, sni: mc.vpshax.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.81MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.24MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.57MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-9.66MB/s(Youtube:不良林), server: jgwcc.356930.xyz, port: 10021, type: vmess, uuid: 6be5af5d-46f2-4a1a-9b89-c174aa7c8835, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: jgwcc.356930.xyz}}
-  - {name: 🇨🇦 加拿大-2.79MB/s(Youtube:不良林), server: 134.195.196.150, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-5.44MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.86MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: 38.107.226.48, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.99MB/s(Youtube:不良林), server: 134.195.196.150, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-2.51MB/s(Youtube:不良林), server: 134.195.196.150, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-5.59MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.27MB/s(Youtube:不良林), server: 134.195.196.150, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇳 中国-4.45MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.39MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.08MB/s(Youtube:不良林), server: 134.195.196.150, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇸🇬 新加坡-2.11MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.90MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.10MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.21MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.21MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.21MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.21MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.21MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.21MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.21MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.57MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-9.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.21MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
